fix gap between cover & alignfull background

--- a/src/assets/scss/layout/_vertical.scss
+++ b/src/assets/scss/layout/_vertical.scss
@@ -20,6 +20,10 @@
     }
   }
 
+  > .wp-block-cover + .alignfull.has-background {
+    margin-top: 0;
+  }
+
 }
 
 // elsewhere
